bk_ida/gccida/c0/propagate_one_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2044:20: error: expected identifier or '('
unsigned __int64 *(short *)0x_0; // [rsp+30h] [rbp-C0h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2044:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2044:19: note: to match this '('
unsigned __int64 *(short *)0x_0; // [rsp+30h] [rbp-C0h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2045:16: error: expected identifier or '('
unsigned int *(short *)0xnum__0; // [rsp+3Ch] [rbp-B4h] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2045:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2045:15: note: to match this '('
unsigned int *(short *)0xnum__0; // [rsp+3Ch] [rbp-B4h] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2054:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+88h] [rbp-68h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2054:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2054:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+88h] [rbp-68h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2055:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+94h] [rbp-5Ch] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2055:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2055:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+94h] [rbp-5Ch] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2065:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev = (  struct rtx_def *)insn[1]; 
                           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2070:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
return ( rtx)insn[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2092:64: error: too many arguments provided to function-like macro invocation
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, "flow.c", 1615, "propagate_one_insn"); 
                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2092:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, "flow.c", 1615, "propagate_one_insn"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2121:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2125:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2129:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ < 2 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2131:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2131:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2132:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/flow.c:2136:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/propagate_one_insn/src/obj/flow.o] Error 1
